# ant-compat

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  flake.nix
src/: error.rs  lib.rs  logging.rs  main.rs  state.rs  utils.rs
src/adapters/: mod.rs  traits.rs
src/adapters/defaults/: gemini.rs  meowsings.rs  mod.rs  parameters.rs  prompt.rs  pseudofunction.rs  responses_api.rs  tools.rs
src/conversion/: mod.rs  non_stream.rs  request.rs  stream.rs  think_parser.rs
src/directives/: models.rs  processor.rs
src/http/: mod.rs  routes.rs
src/models/: claude.rs  mod.rs  openai.rs  shared.rs
tests/: main.rs
tests/adapters/: mod.rs  parameters.rs  prompt.rs  pseudofunction.rs  tool_schema.rs  tool_simulation.rs  tools.rs
tests/adapters/snapshots/: main__adapters__parameters__high.snap  main__adapters__parameters__low.snap  main__adapters__parameters__max_tokens_adapter.snap  main__adapters__parameters__mid.snap  main__adapters__parameters__none.snap  main__adapters__parameters__temp_adapter.snap  main__adapters__prompt__default_user_prompt_adapter.snap  main__adapters__prompt__redaction_adapter.snap  main__adapters__prompt__uppercase_adapter.snap  main__adapters__pseudofunction__bracket_tools_complex_parsing.snap  main__adapters__pseudofunction__bracket_tools_conversion.snap  main__adapters__pseudofunction__bracket_tools_fragmented_delimiter.snap  main__adapters__pseudofunction__bracket_tools_json_repair.snap  main__adapters__pseudofunction__bracket_tools_stream_conversion.snap  main__adapters__pseudofunction__request_conversion.snap  main__adapters__pseudofunction__xml_tools_fragmented_delimiter.snap  main__adapters__pseudofunction__xml_tools_json_repair.snap  main__adapters__pseudofunction__xml_tools_stream_conversion.snap  main__adapters__tool_schema__gemini_unsupported_schema_1.snap  main__adapters__tool_schema__gemini_unsupported_schema_2.snap  main__adapters__tool_simulation__bracket_tools_complex_parsing.snap  main__adapters__tool_simulation__bracket_tools_conversion.snap  main__adapters__tool_simulation__bracket_tools_edits_then_path_appended.snap  main__adapters__tool_simulation__bracket_tools_fragmented_delimiter.snap  main__adapters__tool_simulation__bracket_tools_hyphenated_name_stream.snap  (+11 more)
tests/conversion/: mod.rs  scenarios.rs  stream.rs
tests/directives/: mod.rs  simple_params.rs
tests/fixtures/: README.md
(+21 files in other folders)
