[package]
name = "ant-compat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-stream = "0.3.6"
axum = { version = "0.8.4", features = ["json", "macros"] }
bstr = "1.12.0"
bytes = "1.10.1"
chumsky = "0.10.1"
futures-util = "0.3.31"
llm_json = "1.0.2"
memchr = "2.7.5"
rand = "0.9.2"
regex = "1.11.1"
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.16"
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["codec"] }
tokio_sse_codec = "0.0.2"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[lints.clippy]
pedantic = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[dev-dependencies]
ant-compat = { path = "." }
bytes = "1.10.1"
futures-util = "0.3.31"
http = "1.3.1"
http-body-util = "0.1.3"
insta = "1.43.1"
rstest = "0.25.0"
saphyr = "0.0.6"
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
